--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "date-fns": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
     "react-icons": "^4.12.0",
-    "date-fns": "^3.0.0"
+    "react-router-dom": "^6.20.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -23,4 +24,3 @@
     "vite": "^5.0.8"
   }
 }
-
